--- a/static/css/style.css
+++ b/static/css/style.css
@@ -240,6 +240,68 @@ body .picture {
     justify-content: space-between;
 }
 
+.top .top_contacts {
+    padding-top: 66px;
+    color: #000;
+    font-size: 60px;
+    font-family: 'Gilroy-Bold';
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-align: center;
+}
+
+.top .form {
+    padding-top: 46px;
+    padding-bottom: 206px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.top .form .placeholder {
+    width: 240px;
+    height: 35px;
+    padding-left: 10px;
+    border-radius: 20px;
+    border-width: 1px;
+    border-color: #666;
+    outline-color: #666;
+    color: #666;
+    font-family: 'Gilroy-Regular';
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.top .form .submit {
+    margin-left: 50px;
+    width: 140px;
+    height: 40px;
+    border-radius: 50px;
+    border-width: 0;
+    background: #F25822;
+    box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.20);
+    margin-right: 27px;
+    color: #FFF;
+    font-size: 15px;
+    font-family: 'Gilroy-Bold';
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    align-items: center;
+}
+
+.top .not_found_block {
+    padding-top: 100px;
+    padding-bottom: 150px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    }
+
 .about_us {
     height: 540px;
     padding: 0 300px;
@@ -337,6 +399,7 @@ body .picture {
     font-weight: 400;
     line-height: 150%;
     margin-top: 17px;
+    height: 90px;
 }
 
 .features .features_link {
