--- a/static/css/style.css
+++ b/static/css/style.css
@@ -252,17 +252,46 @@ body .picture {
 }
 
 .top .form {
+    height: 350px;
     padding-top: 46px;
     padding-bottom: 206px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+
 }
 
-.top .form .placeholder {
+.top .form .form_reg {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    width: 400px;
+    box-shadow: 15px 25px 56px 6px rgba(0, 0, 0, 0.06);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.top .form .form_reg p {
+    margin-bottom: 15px;
+}
+
+.top .form .form-label {
+    padding-left: 15px;
+    color: #666;
+    font-family: 'Gilroy-Regular';
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.top .form .form-input {
+    padding-left: 15px;
     width: 240px;
     height: 35px;
-    padding-left: 10px;
     border-radius: 20px;
     border-width: 1px;
     border-color: #666;
@@ -275,15 +304,27 @@ body .picture {
     line-height: 150%;
 }
 
+.top .form .form-error {
+    color: #F25822;
+    font-family: 'Gilroy-Regular';
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    text-align: center;
+    width: 100%;
+    display: inline-block;
+}
+
 .top .form .submit {
-    margin-left: 50px;
-    width: 140px;
+    margin-left: 20px;
+    margin-right: 25px;
+    width: 200px;
     height: 40px;
     border-radius: 50px;
     border-width: 0;
     background: #F25822;
     box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.20);
-    margin-right: 27px;
     color: #FFF;
     font-size: 15px;
     font-family: 'Gilroy-Bold';
